post_list.html 변경

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Django Girls blog</title>
+        <title>Django test blog</title>
     </head>
     <body>
         <div>
