--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,10 +1,10 @@
 <html>
     <head>
-        <title>Django test blog</title>
+        <title>Django Eupori's blog</title>
     </head>
     <body>
         <div>
-            <h1><a href="">Django Girls Blog</a></h1>
+            <h1><a href="">Django Eupori's Blog</a></h1>
         </div>
 
         <div>
